--- a/templates/tipo_projeto.html
+++ b/templates/tipo_projeto.html
@@ -8,7 +8,7 @@
 
   {% if com_tipo %}<strong>Tipo</strong>: {% endif %}
 
-  <strong style="color:red">
+  <strong style="color:darkblue">
     {% if projeto.avancado %}(Avançado){% endif %}
     {% if projeto.proposta.internacional %}(Internacional){% endif %}
     {% if projeto.proposta.intercambio %}(Intercâmbio){% endif %}
