melhor alinhamento em relatos

--- a/templates/relatos.html
+++ b/templates/relatos.html
@@ -9,6 +9,16 @@
 <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
 <link rel="stylesheet" href="{% static 'css/tabela_reduzida_estudantes.css' %}">
 
+<style>
+  {% comment %} REMOVE vvvvv {% endcomment %}
+  @media screen and (max-width: 420px) {
+    .tabela_redu_estu td {
+        padding: 2px 3px;
+    }
+  }
+  {% comment %} REMOVER ^^^^^ {% endcomment %}
+</style>
+
 {% if projeto %}
   <table class="tabela_redu_estu table-striped"><tbody>
   {% for evento, relatos, avaliados, observacoes in projeto.get_relatos %}
@@ -29,10 +39,10 @@
           </span>
         </a></td>
         <td>
-          {% for alocacao in alocacoes %}<a
+          <div style="white-space: nowrap;">{% for alocacao in alocacoes %}<a
           href="{% url 'relato_avaliar' projeto.id evento.id %}#{{alocacao.id}}"><small><span style="width:20em;" id="s{{alocacao.aluno.id}}_e{{evento.id}}" data-toggle="tooltip" data-html="true" animation="true" title="{{alocacao.aluno}}"
                >{% if alocacao.id in relatos %}&#9989;{% else %}&#10060;{% endif %}</span></small></a
-           >{% endfor %}
+           >{% endfor %}</div>
         </td>
         <td>
         {% if evento.em_prazo %}
