--- a/projetos/static/css/tabela_reduzida_estudantes.css
+++ b/projetos/static/css/tabela_reduzida_estudantes.css
@@ -1,9 +1,16 @@
 .tabela_redu_estu {
-    border-collapse: collapse;
-    border: 0px;
+  border-collapse: collapse;
+  border: 0px;
 }
 
+
 .tabela_redu_estu td {
-    padding: 0px 6px 0px 6px;
-    border: 0px;
+  padding: 0px 6px 0px 6px;
+  border: 0px;
+}
+
+@media screen and (max-width: 420px) {
+  .tabela_redu_estu td {
+    padding: 2px 3px;
+  }
 }
