--- a/administracao/templates/administracao/configurar.html
+++ b/administracao/templates/administracao/configurar.html
@@ -56,8 +56,8 @@
       <span lang="en">Maximum deadline for advisors to evaluate deliveries:</span>
     </label> <input id="prazo_avaliar" name="prazo_avaliar" style="text-align:right;" type="number" min="0" max="9999" step="1" value="{{configuracao.prazo_avaliar}}"/> dias<br>
     <label for="prazo_preencher_banca">
-      <span lang="pt">Prazo para avaliadores preencherem a avaliação de banca:</span>
-      <span lang="en">Deadline for evaluators to fill out the board evaluation:</span>
+      <span lang="pt">Prazo máximo para avaliadores preencherem a avaliação de banca:</span>
+      <span lang="en">Maximum deadline for evaluators to fill out the evaluation of the examination board:</span>
     </label> <input id="prazo_preencher_banca" name="prazo_preencher_banca" style="text-align:right;" type="number" min="0" max="9999" step="1" value="{{configuracao.prazo_preencher_banca}}"/> dias<br>
     <small lang="pt">Os relatório ficarão disponíveis até o prazo definido, após o prazo, o sistema não permitirá mais a visualização do relatório de banca.</small>
     <small lang="en">The reports will be available until the deadline defined, after the deadline, the system will no longer allow the visualization of the report to the evaluation committee.</small>
