--- a/templates/pares.html
+++ b/templates/pares.html
@@ -28,7 +28,7 @@
               {% else %}
                 <a href="{% url 'ver_pares_projeto' alocacao.projeto.id tipo_avaliacao %}" style="color:brown">Aguardando Confirmação de Orientador</a>
               {% endif %}
-            {% else %} <span style="color:#DDB300">Aguardando Preenchimento por Estudante </span>
+            {% else %} <span style="color:#DDB300">Aguardando Estudante Preencher</span>
             {% endif %}
           </td>
         {% endwith %}
