--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -220,11 +220,21 @@
                   {% comment %} Relatório Intermediário {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
                     <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}"
+                      {% if relatorio_intermediario.nota_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
+                        style="color: darkgrey; font-weight: bold;"
+                      {% elif relatorio_intermediario.nota_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
+                        style="color: orange; font-weight: bold;"
+                      {% elif relatorio_intermediario.nota_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
+                        style="color: red; font-weight: bold;"
+                      {% endif %}
                       {% if relatorio_intermediario.nota_texto %}
-                        data-toggle="tooltip" data-html="true" animation="true" title="{{ relatorio_intermediario.conceito|safe }}">
-                      {{ relatorio_intermediario.nota_texto|safe }}
+                       data-toggle="tooltip" data-html="true" animation="true" title="{{ relatorio_intermediario.conceito|safe }}">
+                        {{ relatorio_intermediario.nota_texto|safe }}
                       {% else %}
-                      >
+                        >
+                          {% if relatorio_intermediario.nota_incompleta > 0 %}
+                            <i class="fas fa-exclamation-triangle"></i>
+                          {% endif %}
                       {% endif %}
                     </a>
                   </td>
@@ -232,11 +242,21 @@
                 {% comment %} Relatório Final {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
                     <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}"
+                      {% if relatorio_final.nota_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
+                        style="color: darkgrey; font-weight: bold;"
+                      {% elif relatorio_final.nota_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
+                        style="color: orange; font-weight: bold;"
+                      {% elif relatorio_final.nota_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
+                        style="color: red; font-weight: bold;"
+                      {% endif %}
                       {% if relatorio_final.nota_texto %}
-                        data-toggle="tooltip" data-html="true" animation="true" title="{{ relatorio_final.conceito|safe }}">
-                      {{ relatorio_final.nota_texto|safe }}
+                       data-toggle="tooltip" data-html="true" animation="true" title="{{ relatorio_final.conceito|safe }}">
+                        {{ relatorio_final.nota_texto|safe }}
                       {% else %}
-                      >
+                        >
+                          {% if relatorio_final.nota_incompleta > 0 %}
+                            <i class="fas fa-exclamation-triangle"></i>
+                          {% endif %}
                       {% endif %}
                     </a>
                   </td>
@@ -244,21 +264,21 @@
                 {% comment %} Banca Intermediária {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
                     <a class="imprimir" href="{% url 'resultado_bancas' projeto.id %}"
-                      {% if banca_intermediaria.banca_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
+                      {% if banca_intermediaria.nota_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
                         style="color: darkgrey; font-weight: bold;"
-                      {% elif banca_intermediaria.banca_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
+                      {% elif banca_intermediaria.nota_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
                         style="color: orange; font-weight: bold;"
-                      {% elif banca_intermediaria.banca_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
+                      {% elif banca_intermediaria.nota_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
                         style="color: red; font-weight: bold;"
                       {% endif %}
                       {% if banca_intermediaria.nota_texto %}
                         data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_intermediaria.conceito|safe }}">
                         {{ banca_intermediaria.nota_texto|safe }}
                       {% else %}
-                      >
-                        {% if banca_intermediaria.banca_incompleta > 0 %}
-                          <i class="fas fa-exclamation-triangle"></i>
-                        {% endif %}
+                        >
+                          {% if banca_intermediaria.nota_incompleta > 0 %}
+                            <i class="fas fa-exclamation-triangle"></i>
+                          {% endif %}
                       {% endif %}
                     </a>
                   </td>
@@ -266,21 +286,21 @@
                   {% comment %} Banca Final {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
                     <a class="imprimir" href="{% url 'resultado_bancas' projeto.id %}"
-                      {% if banca_final.banca_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
+                      {% if banca_final.nota_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
                         style="color: darkgrey; font-weight: bold;"
-                      {% elif banca_final.banca_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
+                      {% elif banca_final.nota_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
                         style="color: orange; font-weight: bold;"
-                      {% elif banca_final.banca_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
+                      {% elif banca_final.nota_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
                         style="color: red; font-weight: bold;"
                       {% endif %}
                       {% if banca_final.nota_texto %}
                         data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_final.conceito|safe }}">
                         {{ banca_final.nota_texto|safe }}
                       {% else %}
-                      >
-                        {% if banca_final.banca_incompleta > 0 %}
-                          <i class="fas fa-exclamation-triangle"></i>
-                        {% endif %}
+                        >
+                          {% if banca_final.nota_incompleta > 0 %}
+                            <i class="fas fa-exclamation-triangle"></i>
+                          {% endif %}
                       {% endif %}
                     </a>
                   </td>
@@ -288,11 +308,11 @@
                   {% comment %} Banca Falconi {% endcomment %}
                   <td class="text-center" style="white-space: nowrap;">
                     <a class="imprimir" href="{% url 'resultado_bancas' projeto.id %}"
-                      {% if banca_falconi.banca_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
+                      {% if banca_falconi.nota_incompleta == 1 %} {% comment %} no inicio {% endcomment %}
                         style="color: darkgrey; font-weight: bold;"
-                      {% elif banca_falconi.banca_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
+                      {% elif banca_falconi.nota_incompleta == 2 %} {% comment %} no prazo {% endcomment %}
                         style="color: orange; font-weight: bold;"
-                      {% elif banca_falconi.banca_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
+                      {% elif banca_falconi.nota_incompleta == 3 %} {% comment %} fora do prazo {% endcomment %}
                         style="color: red; font-weight: bold;"
                       {% endif %}
 
@@ -300,10 +320,10 @@
                         data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_falconi.avaliadores|safe }}">
                         {{ banca_falconi.nota_texto|safe }}
                       {% else %}
-                      >
-                        {% if banca_falconi.banca_incompleta > 0 %}
-                          <i class="fas fa-exclamation-triangle"></i>
-                        {% endif %}
+                        >
+                          {% if banca_falconi.nota_incompleta > 0 %}
+                            <i class="fas fa-exclamation-triangle"></i>
+                          {% endif %}
                       {% endif %}
                     
                     </a>
