--- a/documentos/templates/documentos/tabela_imagens.html
+++ b/documentos/templates/documentos/tabela_imagens.html
@@ -17,14 +17,17 @@
   <span class="titulo">
     <span lang="pt">{{ titulo.pt }}</span>
     <span lang="en">{{ titulo.en }}</span>
-    {% if user.tipo_de_usuario == 4 %}
-      <small class="esconder">
-        <a class="open-documento" style="cursor:pointer;"
-           data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
-           >&#10133;</a>
-      </small>
-    {% endif %}
   </span>
+
+  {% if user.tipo_de_usuario == 4 %}
+    <span class="esconder">
+      <a 
+      href="#"
+      class="open-documento" style="cursor:pointer;"
+      data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
+      ><i class="fas fa-plus"></i> Adicionar novo documento</a>
+    </span>
+  {% endif %}
 
   <div class="table-responsive">
     <table id="AtasTable" class="table-bordered table-sm">
