--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -37,10 +37,19 @@
       font-size: 0.9em;
       line-height: 1.2;
       margin-bottom: 0.3em;
+      max-width: 100%;
     }
 
     .pess_proj {margin-left:0.5em;}
     ol {padding-left: 28px;}
+
+    .texto {
+      width: 100%;
+      word-break: break-word;
+      overflow-wrap: break-word;
+      text-align: justify;
+    }
+
   </style>
 
 {% endblock %}
@@ -64,7 +73,9 @@
       {% for projeto, prioridades, cooperacoes, conexoes, qtd_est in projetos %}
         <tr class="row no-gutters {% if projeto.avancado %}avancado{% endif %}" data-type="{{projeto.ano}}.{{projeto.semestre}}"
             {% if qtd_est == 0 %}style="opacity: 0.3;"{% endif %} >
+            
         <td class="projline">
+          
         {% if projeto.organizacao %}
           <span class="logo">
             <a href="{% url 'organizacao_completo' projeto.organizacao.id %}"> 
@@ -82,22 +93,24 @@
           </span>
         {% endif %}
 
-        <div><b lang="pt">Projeto:</b><b lang="en">Project:</b>
-        <a class="imprimir dark-blue-bold" target="_blank" rel="noopener noreferrer" href="{% url 'projeto_completo' projeto.id %}"> 
+        <div>
+          <b lang="pt">Projeto:</b><b lang="en">Project:</b>
+          <a class="imprimir dark-blue-bold" target="_blank" rel="noopener noreferrer" href="{% url 'projeto_completo' projeto.id %}"> 
           {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
-            {{projeto.titulo_final}}</a></div>
+            {{projeto.titulo_final}}</a>
             <small class="titulo_original" style="display: block;">Título original da proposta: 
             <a class="imprimir dark-blue-bold" target="_blank" rel="noopener noreferrer" href="{% url 'projeto_completo' projeto.id %}"> {{projeto.proposta.titulo}}</a></small>
           {% else %}
-            {{projeto.get_titulo}}</a></div>
+            {{projeto.get_titulo}}</a>
           {% endif %}
+        </div>
         
         {% if projeto.resumo %}
-          <div class="resumo appres_projeto" style="margin-top: 6px;"><b lang="pt">Resumo:</b><b lang="en">Abstract(pt):</b>{{projeto.resumo}}</div>
+          <div class="resumo appres_projeto" style="margin-top: 6px;"><b lang="pt">Resumo:</b><b lang="en">Abstract(pt):</b> <p class="texto">{{projeto.resumo}}</p></div>
         {% endif %}
 
         {% if projeto.abstract %}
-          <div class="abstract appres_projeto" style="margin-top: 6px;"><b>Abstract:</b> {{projeto.abstract}}</div>
+          <div class="abstract appres_projeto" style="margin-top: 6px;"><b>Abstract:</b> <p class="texto">{{projeto.abstract}}</p></div>
         {% endif %}
 
         {% if projeto.palavras_chave %}
@@ -105,15 +118,19 @@
         {% endif %}
 
         {% if projeto.proposta.descricao %}
-          <div class="descricao appres_projeto" style="margin-top: 6px;"><b lang="pt">Descrição da proposta de projeto:</b><b lang="en">Project proposal description:</b>{{projeto.proposta.descricao}}</div>
+          <div class="descricao appres_projeto" style="margin-top: 6px;">
+            <b lang="pt">Descrição da proposta de projeto:</b>
+            <b lang="en">Project proposal description:</b>
+            <p class="texto">{{projeto.proposta.descricao}}</p>
+          </div>
         {% endif %}
 
         {% if projeto.proposta.descricao_organizacao %}
-          <div class="apresentacao_organizacao apresentacao appres_projeto"><b lang="pt">Apresentação da Organização Parceira:</b><b lang="en">Partner Organization Presentation:</b> {{projeto.proposta.descricao_organizacao}}</div>  
+          <div class="apresentacao_organizacao apresentacao appres_projeto"><b lang="pt">Apresentação da Organização Parceira:</b><b lang="en">Partner Organization Presentation:</b> <p class="texto">{{projeto.proposta.descricao_organizacao}}</p></div>  
         {% endif %}
 
         {% if projeto.proposta.departamento %}
-          <div class="apresentacao_departamento apresentacao appres_projeto"><b lang="pt">Apresentação do Departamento:</b><b lang="en">Department Presentation:</b> {{projeto.proposta.departamento}}</div>
+          <div class="apresentacao_departamento apresentacao appres_projeto"><b lang="pt">Apresentação do Departamento:</b><b lang="en">Department Presentation:</b> <p class="texto">{{projeto.proposta.departamento}}</p></div>
         {% endif %}
 
         {% include "tipo_projeto.html" with com_tipo=True %}
@@ -263,7 +280,10 @@
           </li>
         {% endfor %}
         </ol>
-        </td></tr>
+        
+        </td>
+        
+      </tr>
       {% endfor %}
       </table>
 
@@ -301,66 +321,67 @@
         <canvas id="chart-area"></canvas>
       </div>
 
-    <br><br>
-    
-    <script>
-      var count_projects = 0;
-      var count_alunos = 0;
-      var prioridade1 = 0;
-      var prioridade2 = 0;
-      var prioridade3 = 0;
-      var prioridade4 = 0;
-      var prioridade5 = 0;
-      var prioridade6m = 0;
-      var nao_definido = 0;
+       
+      <br><br>
+      
+      <script>
+        var count_projects = 0;
+        var count_alunos = 0;
+        var prioridade1 = 0;
+        var prioridade2 = 0;
+        var prioridade3 = 0;
+        var prioridade4 = 0;
+        var prioridade5 = 0;
+        var prioridade6m = 0;
+        var nao_definido = 0;
 
-      function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
+        function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
 
-        count_projects = 0;
-        count_alunos = 0;
-        prioridade1 = 0;
-        prioridade2 = 0;
-        prioridade3 = 0;
-        prioridade4 = 0;
-        prioridade5 = 0;
-        prioridade6m = 0;
-        nao_definido = 0;
+          count_projects = 0;
+          count_alunos = 0;
+          prioridade1 = 0;
+          prioridade2 = 0;
+          prioridade3 = 0;
+          prioridade4 = 0;
+          prioridade5 = 0;
+          prioridade6m = 0;
+          nao_definido = 0;
 
-        var row = $('.row'); 
-        row.each(function(i, el) {
+          var row = $('.row'); 
+          row.each(function(i, el) {
 
-          count_projects = count_projects + 1;
-          var alunos = $(el).find("TD").find("OL");
-          count_alunos = count_alunos + alunos.children().length;
+            count_projects = count_projects + 1;
+            var alunos = $(el).find("TD").find("OL");
+            count_alunos = count_alunos + alunos.children().length;
 
-          $.each(alunos.children('li'), function() {
-            var target = $(this)
-            data = $(target).find('div.prioridade').text();
-            if(data == 1) {prioridade1 += 1;}
-            else if(data == 2) {prioridade2 += 1;}
-            else if(data == 3) {prioridade3 += 1;}
-            else if(data == 4) {prioridade4 += 1;}
-            else if(data == 5) {prioridade5 += 1;}
-            else if(data > 5) {prioridade6m += 1;}
-            else {nao_definido +=1;}
+            $.each(alunos.children('li'), function() {
+              var target = $(this)
+              data = $(target).find('div.prioridade').text();
+              if(data == 1) {prioridade1 += 1;}
+              else if(data == 2) {prioridade2 += 1;}
+              else if(data == 3) {prioridade3 += 1;}
+              else if(data == 4) {prioridade4 += 1;}
+              else if(data == 5) {prioridade5 += 1;}
+              else if(data > 5) {prioridade6m += 1;}
+              else {nao_definido +=1;}
+            });
+
           });
 
-        });
+        }
 
-      }
+        {% comment %} // Só mostra informação de semestre se edição é todas {% endcomment %}
+        ($("#filterEdicao option:selected").attr("value") == "todas" ? $(".semestre").show() : $(".semestre").hide());
 
-      {% comment %} // Só mostra informação de semestre se edição é todas {% endcomment %}
-      ($("#filterEdicao option:selected").attr("value") == "todas" ? $(".semestre").show() : $(".semestre").hide());
+      </script>
+      
+      {% comment %} Mostra gráfico de proporção de prioridades {% endcomment %}
+      {% include "grafico_prioridades.html" %}
 
-    </script>
-    
-    {% comment %} Mostra gráfico de proporção de prioridades {% endcomment %}
-    {% include "grafico_prioridades.html" %}
-
-    <script>
-      filtra_data();
-      mostra_grafico();
-    </script>
+      <script>
+        filtra_data();
+        mostra_grafico();
+      </script>
   
     {% endif %}
 
