--- a/projetos/static/css/form_aval.css
+++ b/projetos/static/css/form_aval.css
@@ -17,38 +17,38 @@ table, td {vertical-align: top;}
 } 
 
 @media only screen and (max-width: 800px) {
-  table, th, td {
-	font-size: 15px;
+    table, th, td {
+    font-size: 15px;
   }
-
+/* 
   tbody {display: flex;}
 
   tr {
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   th, td {        
-	flex-basis: 100%;
-	min-height: calc(130px - 5vw);
-  }
+    flex-basis: 100%;
+    min-height: calc(130px - 5vw);
+  } */
 
   .labels {margin-right: 0.2em;}
   
   .nav-side-wrapper {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
   
   .nav-side {
-	display: flex;
-	-webkit-flex: 1;
-	-ms-flex: 1;
-	flex: 1;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
+    display: flex;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 
