--- a/projetos/static/css/form_aval.css
+++ b/projetos/static/css/form_aval.css
@@ -7,6 +7,10 @@ table, td {vertical-align: top;}
   margin-right: 2em;
 }
 
+.th_objetivos {background-color: #F2F2F2;}
+.td_objetivos {background-color: #FFFFFF;}
+.th_na {background-color: #F2F2E9;}
+
 @media only screen and (max-width: 1100px) {
   table, th, td {font-size: 14px;}
 }
@@ -17,21 +21,22 @@ table, td {vertical-align: top;}
 } 
 
 @media only screen and (max-width: 800px) {
-    table, th, td {
+  
+  table, th, td {
     font-size: 15px;
   }
-/* 
-  tbody {display: flex;}
 
-  tr {
+  .tab_avaliacao tbody {display: flex;}
+
+  .tab_avaliacao tr {
     display: flex;
     flex-wrap: wrap;
   }
 
-  th, td {        
+  .tab_avaliacao th, .tab_avaliacao td {        
     flex-basis: 100%;
     min-height: calc(130px - 5vw);
-  } */
+  }
 
   .labels {margin-right: 0.2em;}
   
