mudando mensagem de NA de Banca

--- a/templates/tabela_avaliacao_objetivos.html
+++ b/templates/tabela_avaliacao_objetivos.html
@@ -157,8 +157,8 @@
             colspan="{% if banca.tipo_de_banca != 3 %}6{% else %}5{% endif %}">
               <label style="margin-left: 8px;" for="objetivo{{objetivo.id}}NA">
                 <input style="padding-bottom:2px;" type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}NA inputNA" id="objetivo{{objetivo.id}}NA" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.NA" required /> 
-                <span lang="pt">indique caso prefira não avaliar este objetivo de aprendizagem.</span>
-                <span lang="en">select if you prefer not to evaluate this learning goal.</span>                
+                <span lang="pt">Prefiro não avaliar este objetivo de aprendizagem</span>
+                <span lang="en">I prefer not to evaluate this learning goal</span>
               </label>
           </td>
         </tr>
