filtra melhor exibição de notas das bancas

--- a/academica/templates/academica/academica.html
+++ b/academica/templates/academica/academica.html
@@ -72,16 +72,16 @@
   <li class="inside_ul">
     <ul>
       <a href="{% url 'estudantes_notas' %}"><li>
-        <span lang="pt">Resultados das Avaliações dos Estudantes</span>
-        <span lang="en" style="display: none;">Results of Student Assessments</span>
+        <span lang="pt">Resultados das Avaliações dos Estudantes (Individual)</span>
+        <span lang="en" style="display: none;">Results of Student Assessments (Individual)</span>
+      </li></a>
+      <a href="{% url 'resultado_projetos' %}"><li>
+        <span lang="pt">Resultados dos Projetos (Grupos)</span>
+        <span lang="en" style="display: none;">Results of Projects (Groups)</span>
       </li></a>
       <a href="{% url 'estudantes_objetivos' %}"><li>
         <span lang="pt">Resultados dos Objetivos de Aprendizagem dos Estudantes</span>
         <span lang="en" style="display: none;">Results of Student Learning Goals</span>
-      </li></a>
-      <a href="{% url 'resultado_projetos' %}"><li>
-        <span lang="pt">Resultados dos Projetos</span>
-        <span lang="en" style="display: none;">Results of Projects</span>
       </li></a>
     </ul>
   </li>
