--- a/templates/calendario_bancas.html
+++ b/templates/calendario_bancas.html
@@ -142,7 +142,14 @@
                 }
               {% endif %}
             }
-            info.el.innerHTML = "<b>" + time_s + " - " + time_e + "</b><br><nobr style='color:#FAD2D2'>" + info.event.extendedProps.organizacao + "</nobr><br><nobr style='color:#F6F5A3'>" + local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
+            let avaliar = "";
+            if (info.event.extendedProps.estudante) {
+              avaliar = info.event.extendedProps.estudante;
+            } else {
+              avaliar = info.event.extendedProps.organizacao;
+            }
+            
+            info.el.innerHTML = "<b>" + time_s + " - " + time_e + "</b><br><nobr style='color:#FAD2D2'>" + avaliar + "</nobr><br><nobr style='color:#F6F5A3'>" + local + "</nobr><br><nobr style='color:#E8E8E8'>" + nome_orientador + "</nobr>";
           }
         }              
       },
@@ -175,6 +182,7 @@
                         membro1: value.membro1,
                         membro2: value.membro2,
                         membro3: value.membro3,
+                        estudante: value.estudante,
                         description: value.description ? value.description : "",
                         editable: value.editable,
                         className: value.className,
