tentando evitar inconsistencia intermitente de versão carregada errada

--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -103,9 +103,12 @@
     function recarregar() {
         setTimeout(function () {
                 recarregar_pagina();
-        }, 12);
+        }, 20);
     }
-    recarregar();
+
+    $(document).ready(function() {
+      recarregar();
+    });
 
   </script>
 
