--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -283,9 +283,9 @@
   <hr>
   {% if projeto.orientador %}
     {% if projeto.proposta.intercambio %}
-      <h4>Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável: </h4>
+      <h5>Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável: </h5>
     {% else %}
-      <h4>Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}: </h4>
+      <h5>Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}: </h5>
     {% endif %}
     <div style="margin-left: 0.3em;">
       &#8614;
@@ -321,7 +321,17 @@
   {% endif %}
 
   <hr>
-  <h4>Estudante{% if alocacoes.count > 2 %}s{% endif %}:</h4>
+  <h5 style="display: inline;">
+    <span lang="pt">Estudante{% if alocacoes.count > 2 %}s{% endif %}:</span>
+    <span lang="en" style="display: none;">Student{% if alocacoes.count > 2 %}s{% endif %}:</span>
+  </h5>
+  {% if alocacoes %}
+    <span class="emails esconder">
+      <a href="mailto:{% for alocacao in alocacoes %}{{alocacao.aluno.user.email}}{% if not forloop.last %},{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{projeto}}&body=Caro{% if alocacoes|length > 1 %}s{% endif %}%20{% for alocacao in alocacoes %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{alocacao.aluno.user.get_full_name}}{% endfor %},%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenacao.coordenador_email}}%20(coordenação%20Capstone)" target="_blank">
+        <i class="fas fa-mail-bulk"></i>
+      </a>
+    </span>
+  {% endif %}
   <ul>
   {% for alocacao in alocacoes %}
     <li>
